# Backtracking-algorithm

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backtracking_lab/: __init__.py  cli.py  linkage.py  metrics.py  nqueens.py  sudoku.py
tests/: test_linkage.py  test_nqueens.py  test_sudoku.py
